test/Fail/Issue5365.err
Issue5365.agda:7.3: error: [ParseError]
Incomplete binding x â†
